moved api key setting to env file var

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,7 @@ DB_TABLE_PREFIX=
 
 # The URI segment that tells Craft to load the control panel
 CP_TRIGGER=admin
+
+# can be an array of keys - no commas if array
+# MODULE_API_KEY=abc123
+MODULE_API_KEY=abc123,fewfw
